src/test/ui/parser/issue-32505.stderr
error: expected expression, found `)`
  --> $DIR/issue-32505.rs:4:12
   |
LL |     foo(|_|)
   |            ^ expected expression

error: aborting due to previous error

