src/test/ui/parser/issue-32505.rs
// compile-flags: -Z continue-parse-after-error

pub fn test() {
    foo(|_|) //~ ERROR expected expression, found `)`
}

fn main() { }
